--- a/lib/l10n/intl_ta.arb
+++ b/lib/l10n/intl_ta.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-02 19:21:35.029706",
+  "@@last_modified": "2025-10-14 20:34:45.787518",
   "acceptedTheInvitation": "👍 {username} அழைப்பை ஏற்றுக்கொண்டது",
   "@acceptedTheInvitation": {
     "type": "String",
@@ -11913,6 +11913,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "நண்பர்களை செயல்பாட்டிற்கு அழைக்கவும்",
+  "inviteFriendsToActivityCourse": "நண்பர்களை செயல்பாட்டுக்கும் பாடத்திற்கும் அழைக்கவும்",
+  "feedbackRespDesc": "நாளை மீண்டும் செயல்பாட்டின் புதுப்பிப்புகளுக்காக சரிபார்க்கவும்.",
+  "activityDropdownDesc": "இந்த செயல்பாட்டை முடித்தவுடன், கீழே கிளிக் செய்யவும்",
+  "activityAnalyticsListBody": "இவை உங்கள் முடித்த செயல்பாடுகள்! செயல்பாடுகளை முடித்த பிறகு, அவற்றை இங்கே பார்க்கலாம்.",
+  "languageMismatchTitle": "மொழி பொருந்தாமை",
+  "languageMismatchDesc": "உங்கள் இலக்கு மொழி இந்த செயல்பாட்டின் மொழியுடன் பொருந்தவில்லை. உங்கள் இலக்கு மொழியை புதுப்பிக்க விரும்புகிறீர்களா?",
+  "reportWordIssueTooltip": "வார்த்தை தகவல் பிரச்சனையை அறிக்கையிடவும்",
+  "tokenInfoFeedbackDialogTitle": "வார்த்தை தகவல் கருத்து",
+  "tokenInfoFeedbackDialogDesc": "AI தவறுகள் செய்கிறது. மேலே உள்ள தகவலுடன் நீங்கள் கண்டுபிடித்த எந்த பிரச்சனைகளையும் விவரிக்கவும்.",
+  "noPublicCoursesFound": "பொது பாடத்திட்டங்கள் கண்டுபிடிக்கப்படவில்லை. நீங்கள் ஒரு பாடத்திட்டத்தை உருவாக்க விரும்புகிறீர்களா?",
+  "noCourseTemplatesFound": "உங்கள் இலக்கு மொழிக்கான எந்த பாடத்திட்டங்களும் கண்டுபிடிக்கப்படவில்லை. அதற்காக, நீங்கள் பாங்கியா பாட்டுடன் உரையாடலாம், மேலும் பிற பாடத்திட்டங்களுக்கு பின்னர் மீண்டும் சரிபார்க்கலாம்.",
+  "botActivityJoinFailMessage": "பாங்கியா பாட்டின் பதில் கொடுக்க சில நேரம் ஆகும். தயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும், அல்லது நண்பரை அழைக்கவும்.",
+  "unsubscribedResponseError": "இந்த அம்சம் சந்தாவை தேவைப்படுத்துகிறது",
+  "leaveDesc": "இந்த இடத்தையும் அதில் உள்ள அனைத்து உரையாடல்களையும் விட்டு செல்லவும்",
+  "selectAll": "அனைத்தையும் தேர்வு செய்யவும்",
+  "deselectAll": "அனைத்தையும் தேர்வு நீக்கவும்",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
