--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -2392,7 +2392,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-10-01 19:49:47.188569",
+  "@@last_modified": "2025-10-14 13:42:05.661430",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12788,6 +12788,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Запрасіць сяброў на мерапрыемства",
+  "inviteFriendsToActivityCourse": "Запрасіць сяброў на мерапрыемства і курс",
+  "feedbackRespDesc": "Паглядзіце заўтра абнаўленні мерапрыемстваў.",
+  "activityDropdownDesc": "Калі вы скончыце з гэтым мерапрыемствам, націсніце ніжэй",
+  "activityAnalyticsListBody": "Гэта вашы завершаныя мерапрыемствы! Пасля завяршэння мерапрыемстваў вы можаце праглядаць іх тут.",
+  "languageMismatchTitle": "Несумяшчальнасць моў",
+  "languageMismatchDesc": "Мэтавая мова не адпавядае мове гэтага мерапрыемства. Хацелі б абнавіць мэту мовы?",
+  "reportWordIssueTooltip": "Паведаміць пра праблему з інфармацыяй пра слова",
+  "tokenInfoFeedbackDialogTitle": "Зваротная сувязь пра інфармацыю пра слова",
+  "tokenInfoFeedbackDialogDesc": "AI робіць памылкі. Калі ласка, апішыце любыя праблемы, якія вы знайшлі з вышэйзгаданай інфармацыяй.",
+  "noPublicCoursesFound": "Публічных курсаў не знойдзена. Ці хацелі б стварыць адзін?",
+  "noCourseTemplatesFound": "Мы не змаглі знайсці курсы для вашай мэты мовы. Пакуль вы можаце пагутарыць з Pangea Bot і вярнуцца пазней для больш курсаў.",
+  "botActivityJoinFailMessage": "Pangea Bot займае час на адказ. Калі ласка, паспрабуйце яшчэ раз пазней або запрасіце сябра.",
+  "unsubscribedResponseError": "Гэтая функцыя патрабуе падпіскі",
+  "leaveDesc": "Пакінуць гэтае месца і ўсе чаты ў ім",
+  "selectAll": "Выбраць усё",
+  "deselectAll": "Адмяніць выбар усяго",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
