--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-09-30 17:12:41.805615",
+  "@@last_modified": "2025-10-14 15:21:55.033622",
   "about": "Quant a",
   "@about": {
     "type": "String",
@@ -11713,6 +11713,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Convida amics a l'activitat",
+  "inviteFriendsToActivityCourse": "Convida amics a l'activitat i al curs",
+  "feedbackRespDesc": "Revisa demà per actualitzacions de l'activitat.",
+  "activityDropdownDesc": "Quan hagis acabat amb aquesta activitat, fes clic a sota",
+  "activityAnalyticsListBody": "Aquests són les teves activitats completes! Després de completar-les, pots veure-les aquí.",
+  "languageMismatchTitle": "Desajust de llengua",
+  "languageMismatchDesc": "La teva llengua objectiu no coincideix amb la llengua d'aquesta activitat. Actualitzar la teva llengua objectiu?",
+  "reportWordIssueTooltip": "Informar d'un problema amb la informació de la paraula",
+  "tokenInfoFeedbackDialogTitle": "Comentari sobre la informació de la paraula",
+  "tokenInfoFeedbackDialogDesc": "L'IA comete errors. Si us plau, descriu qualsevol problema que hagis trobat amb la informació anterior.",
+  "noPublicCoursesFound": "No s'han trobat cursos públics. Voldries crear-ne un?",
+  "noCourseTemplatesFound": "No hem pogut trobar cap curs per a la teva llengua objectiu. Mentrestant, pots xatejar amb Pangea Bot i tornar més tard per més cursos.",
+  "botActivityJoinFailMessage": "El Pangea Bot està tardant a respondre. Si us plau, intenta-ho de nou més tard, o convida un amic.",
+  "unsubscribedResponseError": "Aquesta funció requereix una subscripció",
+  "leaveDesc": "Sortir d'aquest espai i de tots els xats dins d'ell",
+  "selectAll": "Selecciona tot",
+  "deselectAll": "Desselecciona tot",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
