--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "de",
-  "@@last_modified": "2025-09-30 17:27:27.673145",
+  "@@last_modified": "2025-10-14 15:22:06.242366",
   "alwaysUse24HourFormat": "true",
   "@alwaysUse24HourFormat": {
     "description": "Set to true to always display time of day in 24 hour format."
@@ -11686,6 +11686,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Freunde zur Aktivität einladen",
+  "inviteFriendsToActivityCourse": "Freunde zur Aktivität und zum Kurs einladen",
+  "feedbackRespDesc": "Kehren Sie morgen zurück, um Updates zur Aktivität zu erhalten.",
+  "activityDropdownDesc": "Wenn Sie mit dieser Aktivität fertig sind, klicken Sie unten",
+  "activityAnalyticsListBody": "Dies sind Ihre abgeschlossenen Aktivitäten! Nach Abschluss der Aktivitäten können Sie sie hier ansehen.",
+  "languageMismatchTitle": "Sprachinkonsistenz",
+  "languageMismatchDesc": "Ihre Zielsprache stimmt nicht mit der Sprache dieser Aktivität überein. Möchten Sie Ihre Zielsprache aktualisieren?",
+  "reportWordIssueTooltip": "Meldung eines Wortinformationsproblems",
+  "tokenInfoFeedbackDialogTitle": "Feedback zu Wortinformationen",
+  "tokenInfoFeedbackDialogDesc": "KI macht Fehler. Bitte beschreiben Sie alle Probleme, die Sie mit den obigen Informationen gefunden haben.",
+  "noPublicCoursesFound": "Keine öffentlichen Kurse gefunden. Möchten Sie einen erstellen?",
+  "noCourseTemplatesFound": "Wir konnten keine Kurse für Ihre Zielsprache finden. Sie können in der Zwischenzeit mit Pangea Bot chatten und später nach weiteren Kursen suchen.",
+  "botActivityJoinFailMessage": "Pangea Bot benötigt etwas Zeit, um zu antworten. Bitte versuchen Sie es später erneut oder laden Sie einen Freund ein.",
+  "unsubscribedResponseError": "Diese Funktion erfordert ein Abonnement",
+  "leaveDesc": "Diesen Raum und alle Chats darin verlassen",
+  "selectAll": "Alle auswählen",
+  "deselectAll": "Alle abwählen",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
