--- a/lib/l10n/intl_el.arb
+++ b/lib/l10n/intl_el.arb
@@ -4937,7 +4937,7 @@
   "playWithAI": "Παίξτε με την Τεχνητή Νοημοσύνη προς το παρόν",
   "courseStartDesc": "Ο Pangea Bot είναι έτοιμος να ξεκινήσει οποιαδήποτε στιγμή!\n\n...αλλά η μάθηση είναι καλύτερη με φίλους!",
   "@@locale": "el",
-  "@@last_modified": "2025-10-01 20:12:07.078380",
+  "@@last_modified": "2025-10-14 15:22:10.382974",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12747,6 +12747,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Προσκαλέστε φίλους σε δραστηριότητα",
+  "inviteFriendsToActivityCourse": "Προσκαλέστε φίλους σε δραστηριότητα και μάθημα",
+  "feedbackRespDesc": "Ελέγξτε ξανά αύριο για ενημερώσεις δραστηριότητας.",
+  "activityDropdownDesc": "Όταν τελειώσετε με αυτή τη δραστηριότητα, κάντε κλικ παρακάτω",
+  "activityAnalyticsListBody": "Αυτές είναι οι ολοκληρωμένες δραστηριότητές σας! Μετά την ολοκλήρωση των δραστηριοτήτων, μπορείτε να τις δείτε εδώ.",
+  "languageMismatchTitle": "Αντιφάσεις γλώσσας",
+  "languageMismatchDesc": "Η γλώσσα στόχος σας δεν ταιριάζει με τη γλώσσα αυτής της δραστηριότητας. Θέλετε να ενημερώσετε τη γλώσσα στόχο;",
+  "reportWordIssueTooltip": "Αναφορά προβλήματος με τις πληροφορίες της λέξης",
+  "tokenInfoFeedbackDialogTitle": "Ανατροφοδότηση Πληροφοριών Λέξης",
+  "tokenInfoFeedbackDialogDesc": "Η τεχνητή νοημοσύνη κάνει λάθη. Παρακαλώ περιγράψτε τυχόν προβλήματα που βρήκατε με τις παραπάνω πληροφορίες.",
+  "noPublicCoursesFound": "Δεν βρέθηκαν δημόσια μαθήματα. Θα θέλατε να δημιουργήσετε ένα;",
+  "noCourseTemplatesFound": "Δεν βρήκαμε μαθήματα για τη γλώσσα στόχο σας. Μπορείτε να συνομιλήσετε με το Pangea Bot εν τω μεταξύ, και να επιστρέψετε αργότερα για περισσότερα μαθήματα.",
+  "botActivityJoinFailMessage": "Ο Pangea Bot καθυστερεί να απαντήσει. Παρακαλώ δοκιμάστε ξανά αργότερα, ή προσκαλέστε έναν φίλο.",
+  "unsubscribedResponseError": "Αυτή η λειτουργία απαιτεί συνδρομή",
+  "leaveDesc": "Αφήστε αυτόν τον χώρο και όλες τις συνομιλίες μέσα σε αυτόν",
+  "selectAll": "Επιλογή όλων",
+  "deselectAll": "Αποεπιλογή όλων",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
