--- a/lib/l10n/intl_eu.arb
+++ b/lib/l10n/intl_eu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "eu",
-  "@@last_modified": "2025-10-02 19:30:47.819530",
+  "@@last_modified": "2025-10-14 15:22:24.322285",
   "about": "Honi buruz",
   "@about": {
     "type": "String",
@@ -11689,6 +11689,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Deitu lagunak jarduerara",
+  "inviteFriendsToActivityCourse": "Deitu lagunak jarduera eta ikastaro batera",
+  "feedbackRespDesc": "Egon etxeko egunean, eguneraketak ikusteko.",
+  "activityDropdownDesc": "Jarduera honekin amaitu duzunean, klikatu behean",
+  "activityAnalyticsListBody": "Hona hemen zure jarduera osatuak! Jarduerak amaitu ondoren, hemen ikus ditzakezu.",
+  "languageMismatchTitle": "Hizkuntza desberdintasuna",
+  "languageMismatchDesc": "Zure helburu hizkuntza ez dator bat jarduera honen hizkuntzarekin. Eguneratu zure helburu hizkuntza nahi duzun moduan?",
+  "reportWordIssueTooltip": "Txosten hitzaren informazio arazoa",
+  "tokenInfoFeedbackDialogTitle": "Hitzaren Informazioaren Feedbacka",
+  "tokenInfoFeedbackDialogDesc": "AI-ak akatsak egiten ditu. Mesedez, deskribatu aurreko informazioarekin aurkitu dituzun arazoak.",
+  "noPublicCoursesFound": "Ez da ikastaro publikorik aurkitu. Nahi al duzu bat sortu?",
+  "noCourseTemplatesFound": "Ez dugu zure helburu hizkuntzarako ikastaroak aurkitu. Bitartean, Pangea Bot-ekin chat egin dezakezu, eta geroago ikastaro gehiago ikusteko itxaron.",
+  "botActivityJoinFailMessage": "Pangea Bot-ek erantzun hartzeko denbora pixka bat behar du. Saiatu berriro geroago, edo deitu lagun bat.",
+  "unsubscribedResponseError": "Ezaugarri honek harpidetza bat behar du",
+  "leaveDesc": "Irten espazio hau eta bertako chat guztiak",
+  "selectAll": "Hautatu guztiak",
+  "deselectAll": "Desmarkatu guztiak",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
