--- a/lib/l10n/intl_fa.arb
+++ b/lib/l10n/intl_fa.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-02 17:06:44.770706",
+  "@@last_modified": "2025-10-14 15:22:27.631633",
   "repeatPassword": "تکرار رمزعبور",
   "@repeatPassword": {},
   "about": "درباره",
@@ -12421,6 +12421,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "دعوت از دوستان برای فعالیت",
+  "inviteFriendsToActivityCourse": "دعوت از دوستان برای فعالیت و دوره",
+  "feedbackRespDesc": "فردا برای به‌روزرسانی‌های فعالیت بررسی کنید.",
+  "activityDropdownDesc": "وقتی کارتان با این فعالیت تمام شد، روی دکمه زیر کلیک کنید",
+  "activityAnalyticsListBody": "این فعالیت‌های کامل‌شده شما هستند! پس از اتمام فعالیت‌ها، می‌توانید آن‌ها را در اینجا مشاهده کنید.",
+  "languageMismatchTitle": "تفاوت زبان",
+  "languageMismatchDesc": "زبان هدف شما با زبان این فعالیت مطابقت ندارد. می‌خواهید زبان هدف خود را به‌روزرسانی کنید؟",
+  "reportWordIssueTooltip": "گزارش مشکل در اطلاعات کلمه",
+  "tokenInfoFeedbackDialogTitle": "بازخورد اطلاعات کلمه",
+  "tokenInfoFeedbackDialogDesc": "هوش مصنوعی اشتباه می‌کند. لطفاً هر مشکلی که در اطلاعات بالا پیدا کردید، توصیف کنید.",
+  "noPublicCoursesFound": "دوره عمومی پیدا نشد. مایلید یکی بسازید؟",
+  "noCourseTemplatesFound": "ما نتوانستیم دوره‌ای برای زبان هدف شما پیدا کنیم. در این مدت می‌توانید با ربات پنگئا چت کنید و بعداً برای دوره‌های بیشتر برگردید.",
+  "botActivityJoinFailMessage": "ربات پنگئا در حال پاسخ‌دهی است. لطفاً بعداً دوباره تلاش کنید، یا یک دوست دعوت کنید.",
+  "unsubscribedResponseError": "این ویژگی نیاز به اشتراک دارد",
+  "leaveDesc": "این فضا و تمام چت‌های داخل آن را ترک کنید",
+  "selectAll": "انتخاب همه",
+  "deselectAll": "لغو انتخاب همه",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
