--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4964,7 +4964,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-09-30 18:42:36.792949",
+  "@@last_modified": "2025-10-14 15:28:32.137861",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12774,6 +12774,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "मित्रों को गतिविधि में आमंत्रित करें",
+  "inviteFriendsToActivityCourse": "मित्रों को गतिविधि और कोर्स में आमंत्रित करें",
+  "feedbackRespDesc": "कल फिर से जांचें गतिविधि अपडेट के लिए।",
+  "activityDropdownDesc": "जब आप इस गतिविधि को पूरा कर लें, तो नीचे क्लिक करें",
+  "activityAnalyticsListBody": "ये आपकी पूरी की गई गतिविधियां हैं! गतिविधियों को पूरा करने के बाद, आप उन्हें यहां देख सकते हैं।",
+  "languageMismatchTitle": "भाषा मेल नहीं खाती",
+  "languageMismatchDesc": "आपकी लक्षित भाषा इस गतिविधि की भाषा से मेल नहीं खाती। क्या आप अपनी लक्षित भाषा अपडेट करना चाहेंगे?",
+  "reportWordIssueTooltip": "शब्द जानकारी समस्या रिपोर्ट करें",
+  "tokenInfoFeedbackDialogTitle": "शब्द जानकारी प्रतिक्रिया",
+  "tokenInfoFeedbackDialogDesc": "एआई गलतियां करता है। कृपया ऊपर दी गई जानकारी में कोई भी समस्या बताएं।",
+  "noPublicCoursesFound": "कोई सार्वजनिक कोर्स नहीं मिला। क्या आप एक बनाना चाहेंगे?",
+  "noCourseTemplatesFound": "हम आपकी लक्षित भाषा के लिए कोई कोर्स नहीं ढूंढ सके। आप इस बीच Pangea Bot के साथ चैट कर सकते हैं, और बाद में अधिक कोर्स के लिए वापस जांच सकते हैं।",
+  "botActivityJoinFailMessage": "Pangea Bot प्रतिक्रिया देने में समय ले रहा है। कृपया बाद में पुनः प्रयास करें, या एक मित्र को आमंत्रित करें।",
+  "unsubscribedResponseError": "यह सुविधा सदस्यता की आवश्यकता है",
+  "leaveDesc": "इस स्थान और इसके सभी चैट छोड़ें",
+  "selectAll": "सभी चुनें",
+  "deselectAll": "सभी अनचुनें",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
