--- a/lib/l10n/intl_hr.arb
+++ b/lib/l10n/intl_hr.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hr",
-  "@@last_modified": "2025-09-30 19:43:57.789097",
+  "@@last_modified": "2025-10-14 15:28:35.840845",
   "about": "Informacije",
   "@about": {
     "type": "String",
@@ -12061,6 +12061,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Pozovite prijatelje na aktivnost",
+  "inviteFriendsToActivityCourse": "Pozovite prijatelje na aktivnost i tečaj",
+  "feedbackRespDesc": "Vratite se sutra za ažuriranja aktivnosti.",
+  "activityDropdownDesc": "Kad završite s ovom aktivnošću, kliknite ispod",
+  "activityAnalyticsListBody": "Ovo su vaše dovršene aktivnosti! Nakon završetka aktivnosti, možete ih pogledati ovdje.",
+  "languageMismatchTitle": "Neusklađenost jezika",
+  "languageMismatchDesc": "Vaš ciljni jezik ne odgovara jeziku ove aktivnosti. Želite li ažurirati svoj ciljni jezik?",
+  "reportWordIssueTooltip": "Prijavite problem s informacijama o riječi",
+  "tokenInfoFeedbackDialogTitle": "Povratne informacije o informacijama o riječi",
+  "tokenInfoFeedbackDialogDesc": "AI pravi pogreške. Molimo opišite sve probleme koje ste pronašli s gornjim informacijama.",
+  "noPublicCoursesFound": "Nema pronađenih javnih tečajeva. Želite li ga stvoriti?",
+  "noCourseTemplatesFound": "Nismo uspjeli pronaći tečajeve za vaš ciljni jezik. U međuvremenu možete razgovarati s Pangea Botom, a kasnije provjeriti ima li novih tečajeva.",
+  "botActivityJoinFailMessage": "Pangea Bot se malo duže priprema za odgovor. Molimo pokušajte ponovno kasnije ili pozovite prijatelja.",
+  "unsubscribedResponseError": "Ova značajka zahtijeva pretplatu",
+  "leaveDesc": "Napusti ovaj prostor i sve razgovore unutar njega",
+  "selectAll": "Odaberi sve",
+  "deselectAll": "Odznači sve",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
