--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "hu",
-  "@@last_modified": "2025-09-30 21:48:39.995189",
+  "@@last_modified": "2025-10-14 15:28:39.438081",
   "about": "Névjegy",
   "@about": {
     "type": "String",
@@ -11690,6 +11690,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Hívd meg barátaid az aktivitásra",
+  "inviteFriendsToActivityCourse": "Hívd meg barátaid az aktivitáshoz és a kurzushoz",
+  "feedbackRespDesc": "Jövőre nézz vissza az aktivitás frissítéseiért.",
+  "activityDropdownDesc": "Amikor befejezed ezt az aktivitást, kattints az alábbi gombra",
+  "activityAnalyticsListBody": "Ezek a befejezett tevékenységeid! A tevékenységek befejezése után itt megtekintheted őket.",
+  "languageMismatchTitle": "Nyelvi eltérés",
+  "languageMismatchDesc": "A célnyelved nem egyezik ezzel az aktivitással. Frissíted a célnyelvet?",
+  "reportWordIssueTooltip": "Szóinformációs probléma jelentése",
+  "tokenInfoFeedbackDialogTitle": "Szóinformáció visszacsatolás",
+  "tokenInfoFeedbackDialogDesc": "Az AI hibázik. Kérjük, írja le bármilyen problémát, amit az információval kapcsolatban talált.",
+  "noPublicCoursesFound": "Nem találhatók nyilvános kurzusok. Szeretnél létrehozni egyet?",
+  "noCourseTemplatesFound": "Nem találtunk kurzusokat a célnyelvedhez. Közben beszélgethetsz a Pangea Bot-tal, és később visszatérhetsz további kurzusokért.",
+  "botActivityJoinFailMessage": "A Pangea Bot nem reagál azonnal. Kérjük, próbáld meg később, vagy hívd meg egy barátodat.",
+  "unsubscribedResponseError": "Ez a funkció előfizetést igényel",
+  "leaveDesc": "Hagyja el ezt a teret és az összes beszélgetést benne",
+  "selectAll": "Összes kiválasztása",
+  "deselectAll": "Összes kijelölés megszüntetése",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
