--- a/lib/l10n/intl_ie.arb
+++ b/lib/l10n/intl_ie.arb
@@ -4853,7 +4853,7 @@
   "playWithAI": "Joca con AI pro ora",
   "courseStartDesc": "Pangea Bot es preste a partir a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ie",
-  "@@last_modified": "2025-10-02 15:35:28.369517",
+  "@@last_modified": "2025-10-14 15:28:49.807739",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12663,6 +12663,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Invitar amics a l'activitate",
+  "inviteFriendsToActivityCourse": "Invitar amics a l'activitate e cors",
+  "feedbackRespDesc": "Revisa deman per actualisaziuns de l'activitate.",
+  "activityDropdownDesc": "Quan tu ha finì cun questa activitate, clicca ciutta",
+  "activityAnalyticsListBody": "Quisti es tuas activitâts completez! Dopo che tu ha finì le, tu peux veder los ca in qua.",
+  "languageMismatchTitle": "Discrepanza de lingue",
+  "languageMismatchDesc": "La to target lingue no coincide cun la lingue de questa activitate. Voles actualizar la to target lingue?",
+  "reportWordIssueTooltip": "Reportar un problema de informazions de paròla",
+  "tokenInfoFeedbackDialogTitle": "Feedback de informazions de paròla",
+  "tokenInfoFeedbackDialogDesc": "L'IA fa sbagli. Per piaser, descrivi cualsivoglia problem che tu ha trovà cun l'informazions superior.",
+  "noPublicCoursesFound": "Nissun cors public trovà. Voles crear un?",
+  "noCourseTemplatesFound": "No podain trovar nissun cors par la to target lingue. Tu peux discutar cun Pangea Bot intant, e tornar a verificar piò tardi per plui cors.",
+  "botActivityJoinFailMessage": "Pangea Bot al sta tardant a rispuonder. Per piaser, prova piò tardi, o invita un amìs.",
+  "unsubscribedResponseError": "Chest caracteristica requiere un abonament",
+  "leaveDesc": "Lascia chest spazi e toti i discuors in chiel",
+  "selectAll": "Selessiona tot",
+  "deselectAll": "Deselessiona tot",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
