--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-09-30 17:42:08.917183",
+  "@@last_modified": "2025-10-14 15:28:53.268678",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -11692,6 +11692,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Invita amici all'attività",
+  "inviteFriendsToActivityCourse": "Invita amici all'attività e al corso",
+  "feedbackRespDesc": "Controlla di nuovo domani per gli aggiornamenti sull'attività.",
+  "activityDropdownDesc": "Quando hai finito con questa attività, clicca qui sotto",
+  "activityAnalyticsListBody": "Queste sono le tue attività completate! Dopo aver terminato le attività, puoi visualizzarle qui.",
+  "languageMismatchTitle": "Incompatibilità della lingua",
+  "languageMismatchDesc": "La tua lingua di destinazione non corrisponde alla lingua di questa attività. Aggiornare la tua lingua di destinazione?",
+  "reportWordIssueTooltip": "Segnala problema con le informazioni sulla parola",
+  "tokenInfoFeedbackDialogTitle": "Feedback sulle informazioni della parola",
+  "tokenInfoFeedbackDialogDesc": "L'IA commette errori. Per favore, descrivi eventuali problemi riscontrati con le informazioni sopra.",
+  "noPublicCoursesFound": "Nessun corso pubblico trovato. Vuoi crearne uno?",
+  "noCourseTemplatesFound": "Non abbiamo trovato corsi per la tua lingua di destinazione. Puoi chattare con Pangea Bot nel frattempo e tornare più tardi per altri corsi.",
+  "botActivityJoinFailMessage": "Pangea Bot impiega un po' a rispondere. Per favore riprova più tardi o invita un amico.",
+  "unsubscribedResponseError": "Questa funzione richiede un abbonamento",
+  "leaveDesc": "Lascia questo spazio e tutte le chat al suo interno",
+  "selectAll": "Seleziona tutto",
+  "deselectAll": "Deseleziona tutto",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
