--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-09-30 19:14:23.468094",
+  "@@last_modified": "2025-10-14 15:29:17.136110",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -12782,6 +12782,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Inviter venner til aktivitet",
+  "inviteFriendsToActivityCourse": "Inviter venner til aktivitet og kurs",
+  "feedbackRespDesc": "Sjekk igjen i morgen for oppdateringer om aktiviteten.",
+  "activityDropdownDesc": "Når du er ferdig med denne aktiviteten, klikk nedenfor",
+  "activityAnalyticsListBody": "Dette er dine fullførte aktiviteter! Etter å ha fullført aktiviteter, kan du se dem her.",
+  "languageMismatchTitle": "Språkavvik",
+  "languageMismatchDesc": "Mål språket ditt stemmer ikke overens med språket for denne aktiviteten. Vil du oppdatere målspråket?",
+  "reportWordIssueTooltip": "Rapporter problem med ordinformasjon",
+  "tokenInfoFeedbackDialogTitle": "Tilbakemelding om ordinformasjon",
+  "tokenInfoFeedbackDialogDesc": "AI gjør feil. Vennligst beskriv eventuelle problemer du har funnet med informasjonen ovenfor.",
+  "noPublicCoursesFound": "Ingen offentlige kurs funnet. Vil du opprette et?",
+  "noCourseTemplatesFound": "Vi kunne ikke finne noen kurs for ditt målspråk. Du kan chatte med Pangea Bot i mellomtiden, og komme tilbake senere for flere kurs.",
+  "botActivityJoinFailMessage": "Pangea Bot tar litt tid å svare. Vennligst prøv igjen senere, eller inviter en venn.",
+  "unsubscribedResponseError": "Denne funksjonen krever abonnement",
+  "leaveDesc": "Forlat dette rommet og alle chatter i det",
+  "selectAll": "Velg alle",
+  "deselectAll": "Fjern valg av alle",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
