--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-09-30 18:31:30.270271",
+  "@@last_modified": "2025-10-14 15:29:23.909810",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -11689,6 +11689,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Zaproś znajomych do aktywności",
+  "inviteFriendsToActivityCourse": "Zaproś znajomych do aktywności i kursu",
+  "feedbackRespDesc": "Sprawdź jutro aktualizacje aktywności.",
+  "activityDropdownDesc": "Gdy skończysz z tą aktywnością, kliknij poniżej",
+  "activityAnalyticsListBody": "To są Twoje ukończone aktywności! Po zakończeniu aktywności możesz je tutaj zobaczyć.",
+  "languageMismatchTitle": "Niezgodność języków",
+  "languageMismatchDesc": "Twój język docelowy nie zgadza się z językiem tej aktywności. Chcesz zaktualizować swój język docelowy?",
+  "reportWordIssueTooltip": "Zgłoś problem z informacją o słowie",
+  "tokenInfoFeedbackDialogTitle": "Informacje zwrotne o słowie",
+  "tokenInfoFeedbackDialogDesc": "AI popełnia błędy. Proszę opisz wszelkie problemy, które znalazłeś z powyższymi informacjami.",
+  "noPublicCoursesFound": "Nie znaleziono publicznych kursów. Chcesz utworzyć nowy?",
+  "noCourseTemplatesFound": "Nie mogliśmy znaleźć żadnych kursów dla Twojego języka docelowego. W międzyczasie możesz rozmawiać z Pangea Botem i wrócić później po więcej kursów.",
+  "botActivityJoinFailMessage": "Pangea Bot odpowiada z opóźnieniem. Spróbuj ponownie później lub zaproś znajomego.",
+  "unsubscribedResponseError": "Ta funkcja wymaga subskrypcji",
+  "leaveDesc": "Opuść tę przestrzeń i wszystkie czaty w niej",
+  "selectAll": "Zaznacz wszystko",
+  "deselectAll": "Odznacz wszystko",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
