--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-09-30 18:08:41.393173",
+  "@@last_modified": "2025-10-14 15:29:26.823560",
   "copiedToClipboard": "Copiada para a área de transferência",
   "@copiedToClipboard": {
     "type": "String",
@@ -12789,6 +12789,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Convidar amigos para a atividade",
+  "inviteFriendsToActivityCourse": "Convidar amigos para a atividade e o curso",
+  "feedbackRespDesc": "Verifique novamente amanhã para atualizações da atividade.",
+  "activityDropdownDesc": "Quando terminar esta atividade, clique abaixo",
+  "activityAnalyticsListBody": "Estas são suas atividades concluídas! Após terminar as atividades, você pode visualizá-las aqui.",
+  "languageMismatchTitle": "Incompatibilidade de idioma",
+  "languageMismatchDesc": "O idioma de destino não corresponde ao idioma desta atividade. Deseja atualizar seu idioma de destino?",
+  "reportWordIssueTooltip": "Relatar problema na informação da palavra",
+  "tokenInfoFeedbackDialogTitle": "Feedback sobre Informação da Palavra",
+  "tokenInfoFeedbackDialogDesc": "A IA comete erros. Por favor, descreva quaisquer problemas que você encontrou com as informações acima.",
+  "noPublicCoursesFound": "Nenhum curso público encontrado. Gostaria de criar um?",
+  "noCourseTemplatesFound": "Não conseguimos encontrar cursos para seu idioma de destino. Você pode conversar com o Pangea Bot enquanto isso, e voltar mais tarde para mais cursos.",
+  "botActivityJoinFailMessage": "O Pangea Bot está demorando para responder. Por favor, tente novamente mais tarde, ou convide um amigo.",
+  "unsubscribedResponseError": "Este recurso requer uma assinatura",
+  "leaveDesc": "Sair deste espaço e de todas as conversas nele",
+  "selectAll": "Selecionar tudo",
+  "deselectAll": "Desmarcar tudo",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
