--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-10-02 19:12:49.298794",
+  "@@last_modified": "2025-10-14 20:34:26.070198",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -12773,6 +12773,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Pozvať priateľov na aktivitu",
+  "inviteFriendsToActivityCourse": "Pozvať priateľov na aktivitu a kurz",
+  "feedbackRespDesc": "Skontrolujte zajtra aktualizácie aktivity.",
+  "activityDropdownDesc": "Keď dokončíte túto aktivitu, kliknite nižšie",
+  "activityAnalyticsListBody": "Toto sú vaše dokončené aktivity! Po dokončení aktivít si ich môžete pozrieť tu.",
+  "languageMismatchTitle": "Nesúlad jazyka",
+  "languageMismatchDesc": "Váš cieľový jazyk nezodpovedá jazyku tejto aktivity. Chcete aktualizovať svoj cieľový jazyk?",
+  "reportWordIssueTooltip": "Nahlásiť problém s informáciami o slove",
+  "tokenInfoFeedbackDialogTitle": "Spätná väzba k informáciám o slove",
+  "tokenInfoFeedbackDialogDesc": "AI robí chyby. Prosím, opíšte akékoľvek problémy, ktoré ste našli s vyššie uvedenými informáciami.",
+  "noPublicCoursesFound": "Nenašli sa žiadne verejné kurzy. Chceli by ste vytvoriť jeden?",
+  "noCourseTemplatesFound": "Nenašli sme žiadne kurzy pre váš cieľový jazyk. Medzitým môžete chatovať s Pangea Botom a neskôr sa vrátiť pre viac kurzov.",
+  "botActivityJoinFailMessage": "Pangea Bot sa chvíľu načítava. Skúste to prosím neskôr alebo pozvite priateľa.",
+  "unsubscribedResponseError": "Táto funkcia vyžaduje predplatné",
+  "leaveDesc": "Opustiť tento priestor a všetky chaty v ňom",
+  "selectAll": "Vybrať všetko",
+  "deselectAll": "Zrušiť výber všetkého",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
