--- a/lib/l10n/intl_sl.arb
+++ b/lib/l10n/intl_sl.arb
@@ -2945,7 +2945,7 @@
   "playWithAI": "Za zdaj igrajte z AI-jem",
   "courseStartDesc": "Pangea Bot je pripravljen kadarkoli!\n\n...ampak je bolje učiti se s prijatelji!",
   "@@locale": "sl",
-  "@@last_modified": "2025-09-30 22:44:44.958712",
+  "@@last_modified": "2025-10-14 20:34:30.163283",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12770,6 +12770,91 @@
     "placeholders": {}
   },
   "@courseStartDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "inviteFriendsToActivity": "Vabite prijatelje k aktivnosti",
+  "inviteFriendsToActivityCourse": "Vabite prijatelje k aktivnosti in tečaju",
+  "feedbackRespDesc": "Vrnite se jutri za posodobitve aktivnosti.",
+  "activityDropdownDesc": "Ko končate s to aktivnostjo, kliknite spodaj",
+  "activityAnalyticsListBody": "To so vaše zaključene aktivnosti! Po končani aktivnosti jih lahko ogledate tukaj.",
+  "languageMismatchTitle": "Neujemanje jezika",
+  "languageMismatchDesc": "Vaš ciljni jezik se ne ujema z jezikom te aktivnosti. Posodobiti ciljni jezik?",
+  "reportWordIssueTooltip": "Prijavi težavo z informacijami o besedi",
+  "tokenInfoFeedbackDialogTitle": "Povratne informacije o informacijah o besedi",
+  "tokenInfoFeedbackDialogDesc": "AI dela napake. Prosimo, opišite morebitne težave z zgornjimi informacijami.",
+  "noPublicCoursesFound": "Ni najdenih javnih tečajev. Bi želeli ustvariti enega?",
+  "noCourseTemplatesFound": "Nismo mogli najti tečajev za vaš ciljni jezik. Medtem lahko klepetate z Pangea Botom in kasneje preverite več tečajev.",
+  "botActivityJoinFailMessage": "Pangea Bot se odziva nekoliko počasi. Poskusite znova kasneje ali povabite prijatelja.",
+  "unsubscribedResponseError": "Ta funkcija zahteva naročnino",
+  "leaveDesc": "Zapusti ta prostor in vse klepete znotraj njega",
+  "selectAll": "Izberi vse",
+  "deselectAll": "Prekliči izbor vseh",
+  "@inviteFriendsToActivity": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@inviteFriendsToActivityCourse": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@feedbackRespDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityDropdownDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@activityAnalyticsListBody": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@languageMismatchDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@reportWordIssueTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@tokenInfoFeedbackDialogDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noPublicCoursesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@noCourseTemplatesFound": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@botActivityJoinFailMessage": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@unsubscribedResponseError": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@leaveDesc": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@selectAll": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@deselectAll": {
     "type": "String",
     "placeholders": {}
   }
